src-tauri/errors.txt
    Checking fndr v0.2.11 (/Users/anurupkumar/fndr/src-tauri)
error[E0603]: module `schema` is private
   --> src/capture/mod.rs:548:73
    |
548 |             git_stats: structured_memory.as_ref().map(|m| crate::store::schema::GitStats {
    |                                                                         ^^^^^^  -------- struct `GitStats` is not publicly re-exported
    |                                                                         |
    |                                                                         private module
    |
note: the module `schema` is defined here
   --> src/store/mod.rs:4:1
    |
  4 | mod schema;
    | ^^^^^^^^^^^

error[E0063]: missing fields `activity_type`, `consolidated_from`, `decisions` and 20 other fields in initializer of `MemoryRecord`
    --> src/capture/mod.rs:1178:5
     |
1178 |     MemoryRecord {
     |     ^^^^^^^^^^^^ missing `activity_type`, `consolidated_from`, `decisions` and 20 other fields

error[E0063]: missing fields `activity_type`, `consolidated_from`, `decisions` and 20 other fields in initializer of `MemoryRecord`
   --> src/downloads.rs:204:18
    |
204 |     let record = MemoryRecord {
    |                  ^^^^^^^^^^^^ missing `activity_type`, `consolidated_from`, `decisions` and 20 other fields

error[E0063]: missing fields `activity_type`, `consolidated_from`, `decisions` and 20 other fields in initializer of `MemoryRecord`
    --> src/meeting/mod.rs:2154:18
     |
2154 |     let record = MemoryRecord {
     |                  ^^^^^^^^^^^^ missing `activity_type`, `consolidated_from`, `decisions` and 20 other fields

error[E0609]: no field `text` on type `(RecognizedText, std::string::String)`
   --> src/accessibility/mod.rs:344:53
    |
344 |         Ok(text) => normalize_context_excerpt(&text.text),
    |                                                     ^^^^ unknown field
    |
help: one of the expressions' fields has a field of the same name
    |
344 |         Ok(text) => normalize_context_excerpt(&text.0.text),
    |                                                     ++

error[E0425]: cannot find function `get_list_str` in this scope
    --> src/store/lance_store.rs:1794:32
     |
1794 |                 files_touched: get_list_str(&files_touched, i),
     |                                ^^^^^^^^^^^^ help: a function with a similar name exists: `get_opt_str`
...
1957 | fn get_opt_str(col: &Option<StringArray>, i: usize) -> Option<String> {
     | --------------------------------------------------------------------- similarly named function `get_opt_str` defined here

error[E0425]: cannot find function `get_list_str` in this scope
    --> src/store/lance_store.rs:1795:34
     |
1795 |                 symbols_changed: get_list_str(&symbols_changed, i),
     |                                  ^^^^^^^^^^^^ help: a function with a similar name exists: `get_opt_str`
...
1957 | fn get_opt_str(col: &Option<StringArray>, i: usize) -> Option<String> {
     | --------------------------------------------------------------------- similarly named function `get_opt_str` defined here

error[E0425]: cannot find function `get_list_str` in this scope
    --> src/store/lance_store.rs:1798:23
     |
1798 |                 tags: get_list_str(&tags, i),
     |                       ^^^^^^^^^^^^ help: a function with a similar name exists: `get_opt_str`
...
1957 | fn get_opt_str(col: &Option<StringArray>, i: usize) -> Option<String> {
     | --------------------------------------------------------------------- similarly named function `get_opt_str` defined here

error[E0425]: cannot find function `get_list_str` in this scope
    --> src/store/lance_store.rs:1799:27
     |
1799 |                 entities: get_list_str(&entities, i),
     |                           ^^^^^^^^^^^^ help: a function with a similar name exists: `get_opt_str`
...
1957 | fn get_opt_str(col: &Option<StringArray>, i: usize) -> Option<String> {
     | --------------------------------------------------------------------- similarly named function `get_opt_str` defined here

error[E0425]: cannot find function `get_list_str` in this scope
    --> src/store/lance_store.rs:1800:28
     |
1800 |                 decisions: get_list_str(&decisions, i),
     |                            ^^^^^^^^^^^^ help: a function with a similar name exists: `get_opt_str`
...
1957 | fn get_opt_str(col: &Option<StringArray>, i: usize) -> Option<String> {
     | --------------------------------------------------------------------- similarly named function `get_opt_str` defined here

error[E0425]: cannot find function `get_list_str` in this scope
    --> src/store/lance_store.rs:1801:25
     |
1801 |                 errors: get_list_str(&errors, i),
     |                         ^^^^^^^^^^^^ help: a function with a similar name exists: `get_opt_str`
...
1957 | fn get_opt_str(col: &Option<StringArray>, i: usize) -> Option<String> {
     | --------------------------------------------------------------------- similarly named function `get_opt_str` defined here

error[E0425]: cannot find function `get_list_str` in this scope
    --> src/store/lance_store.rs:1802:29
     |
1802 |                 next_steps: get_list_str(&next_steps, i),
     |                             ^^^^^^^^^^^^ help: a function with a similar name exists: `get_opt_str`
...
1957 | fn get_opt_str(col: &Option<StringArray>, i: usize) -> Option<String> {
     | --------------------------------------------------------------------- similarly named function `get_opt_str` defined here

error[E0425]: cannot find function `get_list_str` in this scope
    --> src/store/lance_store.rs:1813:30
     |
1813 |                 related_ids: get_list_str(&related_ids, i),
     |                              ^^^^^^^^^^^^ help: a function with a similar name exists: `get_opt_str`
...
1957 | fn get_opt_str(col: &Option<StringArray>, i: usize) -> Option<String> {
     | --------------------------------------------------------------------- similarly named function `get_opt_str` defined here

error[E0425]: cannot find function `get_list_str` in this scope
    --> src/store/lance_store.rs:1814:36
     |
1814 |                 consolidated_from: get_list_str(&consolidated_from, i),
     |                                    ^^^^^^^^^^^^ help: a function with a similar name exists: `get_opt_str`
...
1957 | fn get_opt_str(col: &Option<StringArray>, i: usize) -> Option<String> {
     | --------------------------------------------------------------------- similarly named function `get_opt_str` defined here

error[E0425]: cannot find function `get_list_str` in this scope
    --> src/store/lance_store.rs:1887:32
     |
1887 |                 files_touched: get_list_str(&files_touched, i),
     |                                ^^^^^^^^^^^^ help: a function with a similar name exists: `get_opt_str`
...
1957 | fn get_opt_str(col: &Option<StringArray>, i: usize) -> Option<String> {
     | --------------------------------------------------------------------- similarly named function `get_opt_str` defined here

error[E0425]: cannot find function `get_list_str` in this scope
    --> src/store/lance_store.rs:1890:23
     |
1890 |                 tags: get_list_str(&tags, i),
     |                       ^^^^^^^^^^^^ help: a function with a similar name exists: `get_opt_str`
...
1957 | fn get_opt_str(col: &Option<StringArray>, i: usize) -> Option<String> {
     | --------------------------------------------------------------------- similarly named function `get_opt_str` defined here

warning: variable does not need to be mutable
    --> src/store/lance_store.rs:1623:9
     |
1623 |     let mut build_str_list = |extractor: &dyn Fn(&MemoryRecord) -> &Vec<String>| {
     |         ----^^^^^^^^^^^^^^
     |         |
     |         help: remove this `mut`
     |
     = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on by default

warning: value assigned to `table` is never read
    --> src/store/lance_store.rs:3158:21
     |
3158 |     let mut table = None;
     |                     ^^^^
     |
     = help: maybe it is overwritten before being read?
     = note: `#[warn(unused_assignments)]` (part of `#[warn(unused)]`) on by default

Some errors have detailed explanations: E0063, E0425, E0603, E0609.
For more information about an error, try `rustc --explain E0063`.
warning: `fndr` (lib) generated 2 warnings
error: could not compile `fndr` (lib) due to 16 previous errors; 2 warnings emitted
